# verified-credit-research-agent

./: .env.example  .gitignore  COMPLETION_SUMMARY.txt  DELIVERY_GUIDE.md  EXPANSION_PLAN.md  EXPANSION_SUMMARY.md  LICENSE  M3_RELEASE_NOTES.md  M5_FINAL_STATUS.md  M5_RELEASE_NOTES.md  PHASE_2_COMPLETION.md  PROJECT_STATUS.md  README.md  SEC_INTEGRATION_PLAN.md  milestone_1_technical_design.md  milestone_2_technical_design.md  milestone_3_technical_design.md  milestone_4_technical_design.md  milestone_5_technical_design.md  pyproject.toml  streamlit_app.py  verify_bedrock_toolcall.py
configs/: companies.yaml  metrics_mapping.yaml  risk_themes.yaml
docs/: architecture.md  demo_walkthrough.md  mcp.md  ui_demo.md
examples/: demo_multi_company.py  m5_live_smoke.json
memory/: research_memory.json
scripts/: ingest_ford_filings.py  inspect_numeric_facts.py  retrieval_sanity_check.py  run_ford_demo.py  run_m3_full_demo.py  run_m5_live_smoke.py
tests/: test_bm25_index.py  test_brief_generator.py  test_calculations.py  test_config_loader.py  test_evidence_checker.py  test_llm_stage_workpaper.py  test_m3_guardrails.py  test_m3_query_rewriter.py  test_mcp_server.py  test_metric_resolver.py  test_numeric_verifier.py  test_planner.py  test_research_memory.py  test_rrf.py  test_run_workspace.py  test_schemas.py  test_sec_fetcher.py  test_sec_integration.py  test_section_chunker.py  test_skill_loader.py  test_statement_extractor.py  test_statement_metric_resolver.py  test_task_generator.py  test_task_parser.py  test_trace_logger.py  test_universal_analyzer.py  (+2 more)
(+94 files in other folders)
