[project]
name = "verified-credit-research-agent"
version = "0.1.0"
description = "Auditable credit research agent harness for Ford debt and liquidity SEC filing analysis."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "boto3>=1.34.0",
  "numpy>=1.24.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "rank-bm25>=0.2.2",
  "requests>=2.31.0",
  "sentence-transformers>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
